js/src/tests/test262/built-ins/Error/prototype/stack/instance-no-own-stack.js





















for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');

  assert.sameValue(
    Object.prototype.hasOwnProperty.call(err, 'stack'),
    false,
    Ctor.name + ': hasOwnProperty("stack") is false'
  );

  assert.sameValue(
    Object.getOwnPropertyDescriptor(err, 'stack'),
    undefined,
    Ctor.name + ': getOwnPropertyDescriptor returns undefined'
  );

  
  
  
  if (Ctor !== Error) {
    assert.sameValue(
      Object.getOwnPropertyDescriptor(Object.getPrototypeOf(err), 'stack'),
      undefined,
      Ctor.name + ': stack is not an own property of NativeError.prototype'
    );
  }

  var desc = Object.getOwnPropertyDescriptor(Error.prototype, 'stack');
  assert.notSameValue(desc, undefined, Ctor.name + ': Error.prototype has the accessor');
  assert.sameValue(typeof desc.get, 'function', Ctor.name + ': accessor get is a function');
  assert.sameValue(typeof desc.set, 'function', Ctor.name + ': accessor set is a function');
}

reportCompare(0, 0);
